added whatsapp link

--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
                 </div>
             </div>
             <!-- whatsapp  -->
-            <div class="socials" id="whatsapp">
+            <div class="socials" id="whatsapp" onclick="location.href='https://chat.whatsapp.com/HHelX0nGfHp4VOLHwdTFwN'">
                 <div class="socialLogo">
                     <i class="fa-brands fa-whatsapp"></i>
                 </div>
                 <div class="socialText">
                     Whatsapp <br>
-                    <span>/ +1234567890</span>
+                    <span>/ join the group </span>
                 </div>
             </div>
             </div>
