--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
      <meta property="og:title" content="Students' Chapter Cse Links" />
      <meta property="og:description" content="The official links page of Students' Chapter CSE AOT." />
      <meta property="og:type" content="website" />
+     <meta
+     property="og:image"
+     content="https://raw.githubusercontent.com/diptanshumahish/scCseBioLink/master/logo.svg"
+   />
      <link rel="shortcut icon" href="/logo.svg" type="image/x-icon">
     <title>SC CSE </title>
     <style>
