--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             cursor: pointer;
         }
 
-        .socials:active,.otherLinksCards:active {
+        .socials:active,.ingenuim:active {
             transition: 200ms;
             transform: scale(0.96);
             background-color: rgb(239, 237, 237);
@@ -144,7 +144,7 @@
             padding: 20px;
             text-align: center;
             font-size: 20px;
-            cursor: pointer;
+            
         }
         .otherLinksCards{
             background-color: white;
@@ -163,6 +163,7 @@
         }
         #ingenium{
             background-color: rgb(232, 196, 16);
+            cursor: pointer;
         }
         footer{
             color: white;
@@ -193,7 +194,7 @@
             <div class="sclogo"></div>
         </div>
         <div id="headerRight">
-            Student's Chapter CSE <br>
+            Students' Chapter CSE <br>
             <span>
                 Bio Links
             </span>
