--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         }
 
         #mail {
-            color: #BB001B;
+            color: #4d121b;
         }
 
         #whatsapp {
@@ -148,7 +148,8 @@
         }
 
         #youtube {
-            color: #4d121b;
+
+            color: #BB001B;
         }
 
         #otherLinks {
@@ -250,7 +251,7 @@
                 </div>
                 <div class="socialText">
                     Instagram <br>
-                    <span>/ @sccse</span>
+                    <span>/ @sccse_aot</span>
                 </div>
             </div>
             <!-- youtube  -->
