--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <!-- instagram  -->
-            <div class="socials" id="instagram">
+            <div class="socials" id="instagram" onclick="location.href='https://www.instagram.com/sccse_aot/'">
                 <div class="socialLogo">
                     <i class="fa-brands fa-instagram"></i>
                 </div>
