--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <main>
         <div id="links">
             <!-- facebook  -->
-            <div class="socials" id="facebook" onclick="location.href='https://www.facebook.com/aotstudentschapter' ">
+            <div class="socials" id="facebook" onclick="location.href='https://www.facebook.com/sccseaot' ">
                 <div class="socialLogo">
                     <i class="fa-brands fa-facebook"></i>
                 </div>
