--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
                 <div class="socialText">
                     Facebook <br>
-                    <span>/ @aotstudentschapter</span>
+                    <span>/ @sccseaot</span>
                 </div>
             </div>
             <!-- twitter  -->
