--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </div>
                 <div class="socialText" onclick="location.href='mailto:sccseaot@gmail.com'">
                     Mail <br>
-                    <span>/ sccse.aot@gmail.com</span>
+                    <span>/ mail us</span>
                 </div>
             </div>
             <!-- whatsapp  -->
