--- a/index.html
+++ b/index.html
@@ -305,7 +305,10 @@
             <div class="otherLinksCards" id="ingenium" onclick="location.href='https://aotingenium.com/'">
                 Ingenium <br>
                 <span> The official web magazine of AOT</span>
-
+            </div>
+            <div class="otherLinksCards" id="ingenium" onclick="location.href='https://cheerful-edam-f83.notion.site/a05fb60636fb4191952cc98a3fbdb53c'">
+                source codes <br>
+                <span> Here are the source codes</span>
             </div>
         </div>
 
